feat(EIDOMNI-200) : fix pr findings